--- a/tracker.css
+++ b/tracker.css
@@ -20,6 +20,9 @@
   }
 
   .tracker-table td {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
     text-align: right;
     padding-left: 50%;
     position: relative;
@@ -30,7 +33,7 @@
     content: attr(data-label);
     position: absolute;
     left: 0;
-    width: 45%;
+    width: 100%;
     padding-left: 0.75rem;
     font-weight: 600;
     text-align: left;
